<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    tools:context="ru.samrzhevsky.astronetics.ui.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_input_firstname" />

    <EditText
        android:id="@+id/settings_firstname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:maxLength="255"
        android:hint="@string/settings_enter_firstname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_input_lastname" />

    <EditText
        android:id="@+id/settings_lastname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:maxLength="255"
        android:hint="@string/settings_enter_lastname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_input_midname" />

    <EditText
        android:id="@+id/settings_midname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:maxLength="255"
        android:hint="@string/settings_enter_midname" />

    <TextView
        android:id="@+id/settings_edit_unavailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setting_edit_unavailable"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/settings_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/settings_check_for_updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/settings_check_for_updates" />

</LinearLayout>