<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:id="@+id/rating_layout"
    android:gravity="center"
    tools:context="ru.samrzhevsky.astronetics.ui.RatingFragment">

    <LinearLayout
        android:id="@+id/rating_card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/medal"
            android:contentDescription="@string/empty_str"
            android:layout_gravity="center"
            app:tint="@color/yellow" />

        <TextView
            android:id="@+id/rating_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_score_1"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/rating_better"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_better"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rating_card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/rating_to_get_a_cert" />

        <ProgressBar
            android:id="@+id/rating_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/rating_progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/rating_cert_progress" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_download_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:text="@string/rating_download_cert" />

    <Button
        android:id="@+id/btn_reset_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red_light"
        android:visibility="gone"
        android:text="@string/rating_reset_progress" />

    <Button
        android:id="@+id/btn_rating_vk_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vk_login"
        android:backgroundTint="@color/vk_blue"
        android:textColor="#fff" />

</LinearLayout>